ros2/log/build_2020-11-18_21-47-31/jarvis_core/stderr.log
  File "/home/jarvis/workspace/ros2/install/jarvis_core/lib/python3.8/site-packages/jarvis_core/core.py", line 13
    if frame 1 = None:
             ^
SyntaxError: invalid syntax

